--- a/index.html
+++ b/index.html
@@ -232,6 +232,6 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 <script src="js/main.js" type="module"></script>
-<script src="Pristine/dist/pristine.js" type="module"></script>
+<script src="vendor/pristine/pristine.min.js"></script>
 </body>
 </html>
